--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,159 @@
 #root {
   max-width: 1280px;
+  min-width: 720px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
+}
+
+body{
+  font-size: 80%;
+  letter-spacing: 0.15em;
+  background-color: White;
+  color: #333;
+}
+
+.header{
+  display: flex;
+  justifyContent: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  height: 60px;
+
+}
+
+.header.title{
+  margin: 0 ;
+  fontSize: 20px;
+}
+
+.search-bar {
+  flex: 1;
+  max-width: 400px;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  font-size: 12px;
+  margin: 0 20px;
+}
+
+.user-section {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.userName {
+  font-weight: bold;
+}
+.Button {
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.Button:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+/*parent card div styling*/
+.-recipe-list-container{
+ text-align: center;
+  padding: 20px;
+}
+.recipe-list-title{
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.recipe-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /*Responsive columns*/
+  gap: 20px;
+  justify-content: center;
+  padding: 20px;
+
+}
+
+.recipe-card {
+  padding: 10px;
+  width: auto;
+  border: 1px solid #ccc;
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 8px; /* 5px rounded corners */
+  position: relative
+}
+
+.recipe-card:hover{
+  transform: scale(1.05);
+}
+
+.recipe-card img{
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card button{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.recipe-detail-container {
+  display:grid;
+  grid-template-columns: 1fr 1fr; /*Two Columns*/
+  grid-template-rows: auto 1fr; /*Two rows*/
+  gap: 20px;
+  padding: 40px;
+  height: 100vh;
+}
+
+.recipe-image{
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.recipe-ingredients{
+  grid-column: 1/2;
+  grid-row: 2/3;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.recipe-ingredients ul {
+  list-style: none;
+  padding-left: 20px;
+}
+
+.recipe-title {
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+  align-self: center;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.recipe-instructions{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  padding: 15px;
+  border-radius: 10px;
 }
